# chessbattle

./: .gitignore  privacy_policy.html
app/: build.gradle
app/src/androidTest/java/no/kristiania/alphonsesantoro/chessbattle/: ExampleInstrumentedTest.kt
app/src/debug/res/values/: google_maps_api.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jstockfish.cpp  jstockfish_Position.h  jstockfish_Uci.h
app/src/main/java/no/kristiania/alphonsesantoro/chessbattle/: ChessBattleActivity.kt
app/src/main/java/no/kristiania/alphonsesantoro/chessbattle/adapters/: GamesInProgressRecyclerAdapter.kt  MovesRecyclerAdapter.kt
app/src/main/java/no/kristiania/alphonsesantoro/chessbattle/database/: AppDatabase.kt  BaseModel.kt  Converters.kt  GameLineModel.kt  GameLineRepository.kt  GameModel.kt  GameRepository.kt  UserModel.kt  UserRepository.kt
app/src/main/java/no/kristiania/alphonsesantoro/chessbattle/fragments/: BaseFragment.kt  BoardFragment.kt  FindGameFragment.kt  FindGameViewModel.kt  MainMenuFragment.kt  SignInFragment.kt
app/src/main/java/no/kristiania/alphonsesantoro/chessbattle/game/: Game.kt  LiveGame.kt  Misc.kt  (+2 more)
app/src/main/res/drawable/: gradient_fade_primary.xml  ic_arrow_left.xml  ic_arrow_right.xml  ic_black_queen.xml  ic_chess_board.xml  ic_flip_board.xml  ic_game_settings.xml  ic_handshake.xml  ic_selected_square.xml  ic_square_hint.xml  ic_square_suggestion.xml  popup_background.xml
app/src/main/res/layout/: activity_chess_battle.xml  black_name_block.xml  black_perspective.xml  black_promote_popup.xml  chess_board.xml  drawer_header.xml  find_game_fragment.xml  fragment_board.xml  fragment_main_menu.xml  fragment_sign_in.xml  game_settings.xml  game_settings_menu.xml  games_in_progress.xml  landscape_board.xml  loading_panel.xml  portrait_board.xml  recycler_game_item.xml  recycler_list_item.xml  white_name_block.xml  white_perspective.xml  white_promote_popup.xml
app/src/main/res/menu/: menu_items.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-no-rNO/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+13 files in other folders)
